// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JoinRequest should render correctly on multiple join requests 1`] = `
<div
  class="requests__wrapper"
>
  <div
    class="request__container"
  >
    <figure
      class="request__request-figure"
    >
      <div
        class="user-avatar"
      >
        <svg
          class="avatar accent-color__planning-pink"
          height="280px"
          version="1.1"
          viewBox="0 0 264 280"
          width="264px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <desc>
            Created with getavataaars.com
          </desc>
          <defs>
            <circle
              cx="120"
              cy="120"
              id="react-path-16"
              r="120"
            />
            <path
              d="M12,160 C12,226.27417 65.72583,280 132,280 C198.27417,280 252,226.27417 252,160 L264,160 L264,-1.42108547e-14 L-3.19744231e-14,-1.42108547e-14 L-3.19744231e-14,160 L12,160 Z"
              id="react-path-17"
            />
            <path
              d="M124,144.610951 L124,163 L128,163 L128,163 C167.764502,163 200,195.235498 200,235 L200,244 L0,244 L0,235 C-4.86974701e-15,195.235498 32.235498,163 72,163 L72,163 L76,163 L76,144.610951 C58.7626345,136.422372 46.3722246,119.687011 44.3051388,99.8812385 C38.4803105,99.0577866 34,94.0521096 34,88 L34,74 C34,68.0540074 38.3245733,63.1180731 44,62.1659169 L44,56 L44,56 C44,25.072054 69.072054,5.68137151e-15 100,0 L100,0 L100,0 C130.927946,-5.68137151e-15 156,25.072054 156,56 L156,62.1659169 C161.675427,63.1180731 166,68.0540074 166,74 L166,88 C166,94.0521096 161.51969,99.0577866 155.694861,99.8812385 C153.627775,119.687011 141.237365,136.422372 124,144.610951 Z"
              id="react-path-18"
            />
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
            id="Avataaar"
            stroke="none"
            stroke-width="1"
          >
            <g
              id="Avataaar/Circle"
              transform="translate(-825.000000, -1100.000000)"
            >
              <g
                transform="translate(825.000000, 1100.000000)"
              >
                <g
                  fill-rule="evenodd"
                  id="Circle"
                  stroke-width="1"
                  transform="translate(12.000000, 40.000000)"
                >
                  <mask
                    fill="white"
                    id="react-mask-19"
                  >
                    <use
                      xlink:href="#react-path-16"
                    />
                  </mask>
                  <use
                    fill="#E6E6E6"
                    id="Circle-Background"
                    xlink:href="#react-path-16"
                  />
                  <g
                    fill="#65C9FF"
                    id="Color/Palette/Blue-01"
                    mask="url(#react-mask-19)"
                  >
                    <rect
                      height="240"
                      id="🖍Color"
                      width="240"
                      x="0"
                      y="0"
                    />
                  </g>
                </g>
                <mask
                  fill="white"
                  id="react-mask-20"
                >
                  <use
                    xlink:href="#react-path-17"
                  />
                </mask>
                <g
                  id="Mask"
                />
                <g
                  fill-rule="evenodd"
                  id="Avataaar"
                  mask="url(#react-mask-20)"
                  stroke-width="1"
                >
                  <g
                    id="Body"
                    transform="translate(32.000000, 36.000000)"
                  >
                    <mask
                      fill="white"
                      id="react-mask-21"
                    >
                      <use
                        xlink:href="#react-path-18"
                      />
                    </mask>
                    <use
                      fill="#D0C6AC"
                      xlink:href="#react-path-18"
                    />
                    <g
                      fill="#FFDBB4"
                      id="Skin/👶🏽-03-Brown"
                      mask="url(#react-mask-21)"
                    >
                      <g
                        id="Color"
                        transform="translate(0.000000, 0.000000)"
                      >
                        <rect
                          height="280"
                          width="264"
                          x="0"
                          y="0"
                        />
                      </g>
                    </g>
                    <path
                      d="M156,79 L156,102 C156,132.927946 130.927946,158 100,158 C69.072054,158 44,132.927946 44,102 L44,79 L44,94 C44,124.927946 69.072054,150 100,150 C130.927946,150 156,124.927946 156,94 L156,79 Z"
                      fill="#000000"
                      fill-opacity="0.100000001"
                      id="Neck-Shadow"
                      mask="url(#react-mask-21)"
                    />
                  </g>
                  <g
                    id="Clothing/Shirt-Crew-Neck"
                    transform="translate(0.000000, 170.000000)"
                  >
                    <defs>
                      <path
                        d="M165.960472,29.2949161 C202.936473,32.3249982 232,63.2942856 232,101.051724 L232,110 L32,110 L32,101.051724 C32,62.9525631 61.591985,31.7649812 99.0454063,29.2195264 C99.0152598,29.5931145 99,29.9692272 99,30.3476251 C99,42.2107177 113.998461,51.8276544 132.5,51.8276544 C151.001539,51.8276544 166,42.2107177 166,30.3476251 C166,29.9946691 165.986723,29.6437014 165.960472,29.2949161 Z"
                        id="react-path-22"
                      />
                    </defs>
                    <mask
                      fill="white"
                      id="react-mask-23"
                    >
                      <use
                        xlink:href="#react-path-22"
                      />
                    </mask>
                    <use
                      fill="#E6E6E6"
                      fill-rule="evenodd"
                      id="Clothes"
                      xlink:href="#react-path-22"
                    />
                    <g
                      fill="#25557C"
                      fill-rule="evenodd"
                      id="Color/Palette/Gray-01"
                      mask="url(#react-mask-23)"
                    >
                      <rect
                        height="110"
                        id="🖍Color"
                        width="264"
                        x="0"
                        y="0"
                      />
                    </g>
                    <g
                      fill="#000000"
                      fill-opacity="0.16"
                      fill-rule="evenodd"
                      id="Shadowy"
                      mask="url(#react-mask-23)"
                      opacity="0.599999964"
                      stroke-width="1"
                    >
                      <g
                        id="Hola-👋🏼"
                        transform="translate(92.000000, 4.000000)"
                      >
                        <ellipse
                          cx="40.5"
                          cy="27.8476251"
                          rx="39.6351047"
                          ry="26.9138272"
                        />
                      </g>
                    </g>
                  </g>
                  <g
                    fill="#000000"
                    id="Face"
                    transform="translate(76.000000, 82.000000)"
                  >
                    <g
                      id="Mouth/Concerned"
                      transform="translate(2.000000, 52.000000)"
                    >
                      <defs>
                        <path
                          d="M35.117844,15.1280772 C36.1757121,24.6198025 44.2259873,32 54,32 C63.8042055,32 71.8740075,24.574136 72.8917593,15.0400546 C72.9736685,14.272746 72.1167429,13 71.042767,13 C56.1487536,13 44.7379213,13 37.0868244,13 C36.0066168,13 35.0120058,14.1784435 35.117844,15.1280772 Z"
                          id="react-path-24"
                        />
                      </defs>
                      <mask
                        fill="white"
                        id="react-mask-25"
                      >
                        <use
                          transform="translate(54.003637, 22.500000) scale(1, -1) translate(-54.003637, -22.500000) "
                          xlink:href="#react-path-24"
                        />
                      </mask>
                      <use
                        fill="#000000"
                        fill-opacity="0.699999988"
                        fill-rule="evenodd"
                        id="Mouth"
                        transform="translate(54.003637, 22.500000) scale(1, -1) translate(-54.003637, -22.500000) "
                        xlink:href="#react-path-24"
                      />
                      <rect
                        fill="#FFFFFF"
                        fill-rule="evenodd"
                        height="16"
                        id="Teeth"
                        mask="url(#react-mask-25)"
                        rx="5"
                        width="31"
                        x="39"
                        y="2"
                      />
                      <g
                        fill="#FF4F6D"
                        fill-rule="evenodd"
                        id="Tongue"
                        mask="url(#react-mask-25)"
                        stroke-width="1"
                      >
                        <g
                          transform="translate(38.000000, 24.000000)"
                        >
                          <circle
                            cx="11"
                            cy="11"
                            id="friend?"
                            r="11"
                          />
                          <circle
                            cx="21"
                            cy="11"
                            id="How-you-doing"
                            r="11"
                          />
                        </g>
                      </g>
                    </g>
                    <g
                      fill-opacity="0.16"
                      id="Nose/Default"
                      transform="translate(28.000000, 40.000000)"
                    >
                      <path
                        d="M16,8 C16,12.418278 21.372583,16 28,16 L28,16 C34.627417,16 40,12.418278 40,8"
                        id="Nose"
                      />
                    </g>
                    <g
                      fill-opacity="0.599999964"
                      id="Eyes/Closed-😌"
                      transform="translate(0.000000, 8.000000)"
                    >
                      <path
                        d="M16.1601674,32.4473116 C18.006676,28.648508 22.1644225,26 26.9975803,26 C31.8136766,26 35.9591217,28.629842 37.8153518,32.4071242 C38.3667605,33.5291977 37.5821037,34.4474817 36.790607,33.7670228 C34.3395063,31.6597833 30.8587163,30.3437884 26.9975803,30.3437884 C23.2572061,30.3437884 19.8737584,31.5787519 17.4375392,33.5716412 C16.5467928,34.3002944 15.6201012,33.5583844 16.1601674,32.4473116 Z"
                        id="Closed-Eye"
                        transform="translate(27.000000, 30.000000) scale(1, -1) translate(-27.000000, -30.000000) "
                      />
                      <path
                        d="M74.1601674,32.4473116 C76.006676,28.648508 80.1644225,26 84.9975803,26 C89.8136766,26 93.9591217,28.629842 95.8153518,32.4071242 C96.3667605,33.5291977 95.5821037,34.4474817 94.790607,33.7670228 C92.3395063,31.6597833 88.8587163,30.3437884 84.9975803,30.3437884 C81.2572061,30.3437884 77.8737584,31.5787519 75.4375392,33.5716412 C74.5467928,34.3002944 73.6201012,33.5583844 74.1601674,32.4473116 Z"
                        id="Closed-Eye"
                        transform="translate(85.000000, 30.000000) scale(1, -1) translate(-85.000000, -30.000000) "
                      />
                    </g>
                  </g>
                  <g
                    fill-rule="evenodd"
                    id="Top"
                    stroke-width="1"
                  >
                    <defs>
                      <rect
                        height="280"
                        id="react-path-30"
                        width="264"
                        x="0"
                        y="0"
                      />
                      <path
                        d="M94.2519269,52.0221149 C94.3749353,51.9677149 94.0696712,51.9468149 93.3361345,51.9595149 C94.2276637,51.9577149 94.5329279,51.9785149 94.2519269,52.0221149 M86.1169775,36.3015924 C86.1148422,36.2819924 86.1337548,36.4526924 86.1169775,36.3015924 M193.765056,70.7656665 C193.500946,67.448734 193.03295,64.1518864 192.246676,60.9110823 C191.622233,58.3353492 190.769007,55.8775343 189.760006,53.4200433 C189.150703,51.9353766 187.727538,49.8961062 187.560324,48.2944933 C187.395466,46.7168527 188.626521,44.969138 188.889285,43.1323368 C189.144311,41.3447761 189.100909,39.4652134 188.734183,37.6938503 C187.901144,33.6710288 185.140271,29.9300447 180.877167,28.8814158 C179.925362,28.6471994 177.913417,28.9358396 177.240862,28.3815597 C176.469729,27.7459682 175.932761,25.5806808 175.234637,24.7121687 C173.244224,22.2362125 170.13984,20.6417265 166.865887,21.1976261 C164.454917,21.606776 165.839391,22.1053363 164.032005,20.6864317 C163.027041,19.8976114 162.276095,18.6931622 161.300066,17.8392279 C159.832826,16.5563826 158.149588,15.4581893 156.408146,14.556958 C151.851325,12.19892 146.654249,10.4848961 141.564162,9.64942693 C132.278934,8.12523827 122.368926,9.45408458 113.368668,11.8688141 C108.890239,13.0703477 104.381531,14.5951842 100.222053,16.6117782 C98.4385542,17.4764029 97.4090304,18.1936301 95.5494951,18.4200717 C92.6207355,18.7767416 90.1404579,18.7589243 87.3661268,20.0009517 C78.8298269,23.8229236 74.9849256,32.6897818 78.3066539,41.1750259 C78.974835,42.8815988 79.8795374,44.3801954 81.1267416,45.7586062 C82.6474761,47.4392631 83.1975648,47.1085093 81.8877817,49.0411999 C79.9289949,51.9311653 78.2777195,55.0129095 76.9332826,58.2128958 C73.4043038,66.6145606 72.8138416,76.0771643 73.043634,85.0373203 C73.1240445,88.1741362 73.2586228,91.3495022 73.753198,94.4561907 C73.966841,95.8009106 74.0267283,98.3293468 75.0353925,99.3271154 C75.5471264,99.8331265 76.2762042,100.115288 77.0035997,99.9137903 C78.7130802,99.4401742 78.1253096,98.1787097 78.1650102,97.0076274 C78.364859,91.1240324 78.0950295,85.9191145 79.4943071,80.1064647 C80.5278683,75.8118486 82.2504702,71.9114806 84.4827873,68.0713675 C87.3213795,63.1871608 90.3857268,58.8977279 94.2895061,54.7155226 C95.2073299,53.7320079 95.4078515,53.3150832 96.6385698,53.243814 C97.5705244,53.1900382 98.9338023,53.8282213 99.8398505,54.0491558 C101.837665,54.5360539 103.83918,55.0174448 105.873331,55.3452831 C109.613261,55.9481556 113.316519,55.9886494 117.090094,55.8704074 C124.516459,55.6381346 131.974787,55.1172217 139.175061,53.2470535 C143.956964,52.00535 148.196516,49.7762443 152.776887,48.1422364 C152.858644,48.1130808 154.006596,47.2951049 154.207791,47.3284719 C154.488723,47.3747968 156.184746,49.1542588 156.471061,49.3784327 C158.696649,51.1238798 161.137899,51.8566566 163.541467,53.2081794 C166.504881,54.8745825 163.634999,52.4899804 165.269452,54.5668292 C165.745859,55.1716454 165.989782,56.2931632 166.371984,56.9783192 C167.587899,59.1610999 169.279548,61.0795367 171.302932,62.6017816 C173.258018,64.0725184 176.196198,64.7829426 177.193087,66.697168 C177.961865,68.1740599 178.220929,70.1812592 178.841334,71.7579279 C180.468722,75.8931602 182.617937,79.7494709 184.767152,83.6443317 C186.498502,86.7830913 188.392354,89.5250111 188.584801,93.1117947 C188.651754,94.3603012 187.463764,101.849397 190.357534,99.5716982 C190.786502,99.2341415 191.711391,95.415733 191.901483,94.7678314 C192.672616,92.135083 192.94682,89.3866841 193.29605,86.6816947 C193.990474,81.3021672 194.218584,76.1837441 193.765056,70.7656665"
                        id="react-path-29"
                      />
                      <filter
                        filterUnits="objectBoundingBox"
                        height="108.0%"
                        id="react-filter-26"
                        width="101.5%"
                        x="-0.8%"
                        y="-2.0%"
                      >
                        <feoffset
                          dx="0"
                          dy="2"
                          in="SourceAlpha"
                          result="shadowOffsetOuter1"
                        />
                        <fecolormatrix
                          in="shadowOffsetOuter1"
                          result="shadowMatrixOuter1"
                          type="matrix"
                          values="0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.16 0"
                        />
                        <femerge>
                          <femergenode
                            in="shadowMatrixOuter1"
                          />
                          <femergenode
                            in="SourceGraphic"
                          />
                        </femerge>
                      </filter>
                    </defs>
                    <mask
                      fill="white"
                      id="react-mask-28"
                    >
                      <use
                        xlink:href="#react-path-30"
                      />
                    </mask>
                    <g
                      id="Mask"
                    />
                    <g
                      id="Top/Short-Hair/Short-Curly"
                      mask="url(#react-mask-28)"
                    >
                      <g
                        transform="translate(-1.000000, 0.000000)"
                      >
                        <mask
                          fill="white"
                          id="react-mask-27"
                        >
                          <use
                            xlink:href="#react-path-29"
                          />
                        </mask>
                        <use
                          fill="#28354B"
                          fill-rule="evenodd"
                          id="Short-Hair"
                          stroke="none"
                          xlink:href="#react-path-29"
                        />
                        <g
                          fill="#A55728"
                          id="Skin/👶🏽-03-Brown"
                          mask="url(#react-mask-27)"
                        >
                          <g
                            id="Color"
                            transform="translate(0.000000, 0.000000) "
                          >
                            <rect
                              height="280"
                              width="264"
                              x="0"
                              y="0"
                            />
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
    </figure>
    <div
      class="request__wrapper"
    >
      <div
        class="request__info-container"
      >
        <span
          class="request__participant-name"
        >
          user-name-0
        </span>
        <span
          class="request__info-text"
        >
          Is requesting to participate
        </span>
      </div>
      <div
        class="request__button-container"
      >
        <button
          class="request__button"
        >
          Reject
        </button>
        <button
          class="request__button"
        >
          Accept
        </button>
      </div>
    </div>
    <div
      class="request__icon-container"
    >
      <svg
        class="request-icon"
      >
        icon-hand.svg
      </svg>
    </div>
  </div>
  <div
    class="request__container"
  >
    <figure
      class="request__request-figure"
    >
      <div
        class="user-avatar"
      >
        <svg
          class="avatar accent-color__retro-red"
          height="280px"
          version="1.1"
          viewBox="0 0 264 280"
          width="264px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <desc>
            Created with getavataaars.com
          </desc>
          <defs>
            <circle
              cx="120"
              cy="120"
              id="react-path-31"
              r="120"
            />
            <path
              d="M12,160 C12,226.27417 65.72583,280 132,280 C198.27417,280 252,226.27417 252,160 L264,160 L264,-1.42108547e-14 L-3.19744231e-14,-1.42108547e-14 L-3.19744231e-14,160 L12,160 Z"
              id="react-path-32"
            />
            <path
              d="M124,144.610951 L124,163 L128,163 L128,163 C167.764502,163 200,195.235498 200,235 L200,244 L0,244 L0,235 C-4.86974701e-15,195.235498 32.235498,163 72,163 L72,163 L76,163 L76,144.610951 C58.7626345,136.422372 46.3722246,119.687011 44.3051388,99.8812385 C38.4803105,99.0577866 34,94.0521096 34,88 L34,74 C34,68.0540074 38.3245733,63.1180731 44,62.1659169 L44,56 L44,56 C44,25.072054 69.072054,5.68137151e-15 100,0 L100,0 L100,0 C130.927946,-5.68137151e-15 156,25.072054 156,56 L156,62.1659169 C161.675427,63.1180731 166,68.0540074 166,74 L166,88 C166,94.0521096 161.51969,99.0577866 155.694861,99.8812385 C153.627775,119.687011 141.237365,136.422372 124,144.610951 Z"
              id="react-path-33"
            />
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
            id="Avataaar"
            stroke="none"
            stroke-width="1"
          >
            <g
              id="Avataaar/Circle"
              transform="translate(-825.000000, -1100.000000)"
            >
              <g
                transform="translate(825.000000, 1100.000000)"
              >
                <g
                  fill-rule="evenodd"
                  id="Circle"
                  stroke-width="1"
                  transform="translate(12.000000, 40.000000)"
                >
                  <mask
                    fill="white"
                    id="react-mask-34"
                  >
                    <use
                      xlink:href="#react-path-31"
                    />
                  </mask>
                  <use
                    fill="#E6E6E6"
                    id="Circle-Background"
                    xlink:href="#react-path-31"
                  />
                  <g
                    fill="#65C9FF"
                    id="Color/Palette/Blue-01"
                    mask="url(#react-mask-34)"
                  >
                    <rect
                      height="240"
                      id="🖍Color"
                      width="240"
                      x="0"
                      y="0"
                    />
                  </g>
                </g>
                <mask
                  fill="white"
                  id="react-mask-35"
                >
                  <use
                    xlink:href="#react-path-32"
                  />
                </mask>
                <g
                  id="Mask"
                />
                <g
                  fill-rule="evenodd"
                  id="Avataaar"
                  mask="url(#react-mask-35)"
                  stroke-width="1"
                >
                  <g
                    id="Body"
                    transform="translate(32.000000, 36.000000)"
                  >
                    <mask
                      fill="white"
                      id="react-mask-36"
                    >
                      <use
                        xlink:href="#react-path-33"
                      />
                    </mask>
                    <use
                      fill="#D0C6AC"
                      xlink:href="#react-path-33"
                    />
                    <g
                      fill="#EDB98A"
                      id="Skin/👶🏽-03-Brown"
                      mask="url(#react-mask-36)"
                    >
                      <g
                        id="Color"
                        transform="translate(0.000000, 0.000000)"
                      >
                        <rect
                          height="280"
                          width="264"
                          x="0"
                          y="0"
                        />
                      </g>
                    </g>
                    <path
                      d="M156,79 L156,102 C156,132.927946 130.927946,158 100,158 C69.072054,158 44,132.927946 44,102 L44,79 L44,94 C44,124.927946 69.072054,150 100,150 C130.927946,150 156,124.927946 156,94 L156,79 Z"
                      fill="#000000"
                      fill-opacity="0.100000001"
                      id="Neck-Shadow"
                      mask="url(#react-mask-36)"
                    />
                  </g>
                  <g
                    id="Clothing/Shirt-Scoop-Neck"
                    transform="translate(0.000000, 170.000000)"
                  >
                    <defs>
                      <path
                        d="M181.544255,32.3304167 C210.784209,41.4878872 232,68.7921987 232,101.051724 L232,110 L32,110 L32,101.051724 C32,68.3969699 53.7388273,40.8195914 83.5340368,32.0020332 C83.182234,33.4201865 83,34.8712315 83,36.3476251 C83,52.6289957 105.161905,65.8276544 132.5,65.8276544 C159.838095,65.8276544 182,52.6289957 182,36.3476251 C182,34.9849859 181.844766,33.6439396 181.544255,32.3304167 Z"
                        id="react-path-37"
                      />
                    </defs>
                    <mask
                      fill="white"
                      id="react-mask-38"
                    >
                      <use
                        xlink:href="#react-path-37"
                      />
                    </mask>
                    <use
                      fill="#E6E6E6"
                      fill-rule="evenodd"
                      id="Clothes"
                      xlink:href="#react-path-37"
                    />
                    <g
                      fill="#E6E6E6"
                      fill-rule="evenodd"
                      id="Color/Palette/Gray-01"
                      mask="url(#react-mask-38)"
                    >
                      <rect
                        height="110"
                        id="🖍Color"
                        width="264"
                        x="0"
                        y="0"
                      />
                    </g>
                  </g>
                  <g
                    fill="#000000"
                    id="Face"
                    transform="translate(76.000000, 82.000000)"
                  >
                    <g
                      fill-opacity="0.699999988"
                      id="Mouth/Default"
                      transform="translate(2.000000, 52.000000)"
                    >
                      <path
                        d="M40,15 C40,22.7319865 46.2680135,29 54,29 L54,29 C61.7319865,29 68,22.7319865 68,15"
                        id="Mouth"
                      />
                    </g>
                    <g
                      fill-opacity="0.16"
                      id="Nose/Default"
                      transform="translate(28.000000, 40.000000)"
                    >
                      <path
                        d="M16,8 C16,12.418278 21.372583,16 28,16 L28,16 C34.627417,16 40,12.418278 40,8"
                        id="Nose"
                      />
                    </g>
                    <g
                      id="Eyes/Cry-😢"
                      transform="translate(0.000000, 8.000000)"
                    >
                      <circle
                        cx="30"
                        cy="22"
                        fill="#000000"
                        fill-opacity="0.599999964"
                        fill-rule="evenodd"
                        id="Eye"
                        r="6"
                      />
                      <path
                        d="M25,27 C25,27 19,34.2706667 19,38.2706667 C19,41.5846667 21.686,44.2706667 25,44.2706667 C28.314,44.2706667 31,41.5846667 31,38.2706667 C31,34.2706667 25,27 25,27 Z"
                        fill="#92D9FF"
                        fill-rule="nonzero"
                        id="Drop"
                      />
                      <circle
                        cx="82"
                        cy="22"
                        fill="#000000"
                        fill-opacity="0.599999964"
                        fill-rule="evenodd"
                        id="Eye"
                        r="6"
                      />
                    </g>
                    <g
                      fill-opacity="0.599999964"
                      id="Eyebrow/Outline/Raised-Excited"
                    >
                      <g
                        id="I-Browse"
                        transform="translate(12.000000, 0.000000)"
                      >
                        <path
                          d="M3.97579559,17.1279169 C5.47099148,7.60476158 18.0585488,1.10867597 27.1635167,5.30104271 C28.1668367,5.76301969 29.3546946,5.32417444 29.8166716,4.32085442 C30.2786486,3.3175344 29.8398033,2.12967649 28.8364833,1.66769952 C17.3488212,-3.62177466 1.93575948,4.3324746 0.0242044059,16.507492 C-0.147121205,17.5986938 0.598585765,18.6221744 1.68978754,18.7935 C2.78098932,18.9648257 3.80446998,18.2191187 3.97579559,17.1279169 Z"
                          fill-rule="nonzero"
                          id="Eyebrow"
                        />
                        <path
                          d="M61.9757956,17.1279169 C63.4709915,7.60476158 76.0585488,1.10867597 85.1635167,5.30104271 C86.1668367,5.76301969 87.3546946,5.32417444 87.8166716,4.32085442 C88.2786486,3.3175344 87.8398033,2.12967649 86.8364833,1.66769952 C75.3488212,-3.62177466 59.9357595,4.3324746 58.0242044,16.507492 C57.8528788,17.5986938 58.5985858,18.6221744 59.6897875,18.7935 C60.7809893,18.9648257 61.80447,18.2191187 61.9757956,17.1279169 Z"
                          fill-rule="nonzero"
                          id="Eyebrow"
                          transform="translate(73.000097, 9.410436) scale(-1, 1) translate(-73.000097, -9.410436) "
                        />
                      </g>
                    </g>
                  </g>
                  <g
                    fill-rule="evenodd"
                    id="Top"
                    stroke-width="1"
                  >
                    <defs>
                      <rect
                        height="280"
                        id="react-path-43"
                        width="264"
                        x="0"
                        y="0"
                      />
                      <path
                        d="M180.14998,39.9204083 C177.390206,37.1003988 174.185913,34.7068297 171.069252,32.3065503 C170.381566,31.777442 169.682843,31.2610833 169.010544,30.7118441 C168.857687,30.5870323 167.291999,29.4657388 167.104691,29.0530544 C166.653816,28.0602634 166.915042,28.8332916 166.977255,27.6485857 C167.055857,26.150508 170.11064,21.9193194 167.831176,20.9490079 C166.828413,20.522232 165.039628,21.6579526 164.077671,22.0330592 C162.196235,22.7671676 160.291721,23.3932399 158.346734,23.9330847 C159.278588,22.0763407 161.055333,18.3594977 157.71591,19.3543018 C155.114345,20.1293431 152.690052,22.1219709 150.075777,23.0594018 C150.940735,21.6415124 154.399901,17.2479341 151.274209,17.0023366 C150.301549,16.925839 147.471201,18.7503735 146.423952,19.1395717 C143.287223,20.3054888 140.083264,21.0590571 136.789999,21.6525844 C125.59203,23.6707114 112.497238,23.0953019 102.1368,28.1934632 C94.1494796,32.1236942 86.262502,38.2220278 81.648386,45.987539 C77.2011742,53.472559 75.537818,61.6641751 74.6069673,70.2412987 C73.9239644,76.535909 73.8684412,83.0425652 74.1878671,89.3599905 C74.2922241,91.4297869 74.5250203,100.970847 77.5319724,98.0813859 C79.0300967,96.641688 79.019059,90.8282073 79.3963495,88.8604076 C80.1472513,84.9452748 80.870057,81.0126951 82.122006,77.2227096 C84.3282191,70.5439339 86.9307879,63.4296587 92.4269209,58.8297383 C95.9539853,55.8782066 98.4307906,51.8889248 101.806002,48.9112229 C103.322188,47.5738572 102.165231,47.7130963 104.602902,47.888571 C106.240504,48.006337 107.885464,48.0512961 109.52641,48.0942421 C113.322394,48.1928837 117.124399,48.16772 120.921387,48.1811407 C128.56821,48.208653 136.179243,48.316689 143.818708,47.9164188 C147.213653,47.7385955 150.617965,47.6423024 154.00388,47.3282597 C155.895349,47.152785 159.251496,45.9405668 160.808488,46.8669256 C162.233362,47.7144383 163.71309,50.4817719 164.736257,51.615144 C167.153525,54.2935659 170.035717,56.3392052 172.862385,58.5354911 C178.756547,63.114945 181.732392,68.8666908 183.522515,76.023241 C185.305949,83.1532854 184.805905,89.76815 187.013456,96.78479 C187.401784,98.0184813 188.428965,100.14498 189.695296,98.2389151 C189.930434,97.8849461 189.869559,95.9390277 189.869559,94.819339 C189.869559,90.2995934 191.014141,86.9083772 190.999758,82.3591197 C190.943566,68.5271489 190.49637,50.4908308 180.14998,39.9204083 Z"
                        id="react-path-42"
                      />
                      <filter
                        filterUnits="objectBoundingBox"
                        height="108.0%"
                        id="react-filter-39"
                        width="101.5%"
                        x="-0.8%"
                        y="-2.0%"
                      >
                        <feoffset
                          dx="0"
                          dy="2"
                          in="SourceAlpha"
                          result="shadowOffsetOuter1"
                        />
                        <fecolormatrix
                          in="shadowOffsetOuter1"
                          result="shadowMatrixOuter1"
                          type="matrix"
                          values="0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.16 0"
                        />
                        <femerge>
                          <femergenode
                            in="shadowMatrixOuter1"
                          />
                          <femergenode
                            in="SourceGraphic"
                          />
                        </femerge>
                      </filter>
                    </defs>
                    <mask
                      fill="white"
                      id="react-mask-41"
                    >
                      <use
                        xlink:href="#react-path-43"
                      />
                    </mask>
                    <g
                      id="Mask"
                    />
                    <g
                      id="Top/Short-Hair/Short-Flat"
                      mask="url(#react-mask-41)"
                    >
                      <g
                        transform="translate(-1.000000, 0.000000)"
                      >
                        <g
                          id="Facial-Hair/Beard-Medium"
                          transform="translate(49.000000, 72.000000)"
                        >
                          <defs>
                            <path
                              d="M105.017591,94.1296214 C101.150441,99.7213834 98.257542,95.9467308 94.1374777,92.8762163 C91.6567227,91.0272796 87.9608129,88.7275108 84.5044337,88.8410391 C81.0477114,88.7275108 77.3518016,91.0272796 74.8710466,92.8762163 C70.7509822,95.9467308 67.8580835,99.7213834 63.9909333,94.1296214 C61.0884259,89.9323547 62.3028943,82.8739117 65.014944,78.9027173 C68.8738581,73.2512381 74.1088724,75.9847769 79.9622738,75.3400279 C81.5538829,75.1648137 83.1526985,74.7228407 84.5044337,74 C85.856169,74.7228407 87.4546414,75.1648137 89.0462504,75.3400279 C94.899995,75.9847769 100.134666,73.2512381 103.993923,78.9027173 C106.70563,82.8739117 107.920098,89.9323547 105.017591,94.1296214 M140.39109,26 C136.966521,40.0748212 135.393023,54.4337754 132.909944,68.6711471 C132.392536,71.6390145 131.826063,74.5963095 131.224594,77.5496398 C131.098329,78.1697764 130.973781,80.4725746 130.362704,80.7643064 C128.511632,81.6484223 124.739149,76.9466834 123.730409,75.8851496 C121.196893,73.219256 118.684993,70.5292442 115.599415,68.437233 C109.364783,64.2102603 102.065485,61.7108818 94.4700836,61.117837 C91.2922091,60.8693859 86.9951134,61.3025234 84.000116,63.1104016 C81.0051185,61.3025234 76.7080229,60.8693859 73.5298053,61.117837 C65.9344039,61.7108818 58.6351055,64.2102603 52.4004739,68.437233 C49.3148957,70.5292442 46.8033387,73.219256 44.2694796,75.8851496 C43.2607395,76.9466834 39.4882573,81.6484223 37.6371849,80.7643064 C37.0261079,80.4725746 36.9015594,78.1697764 36.7752954,77.5496398 C36.1738255,74.5963095 35.6073527,71.6390145 35.0899445,68.6711471 C32.6072086,54.4337754 31.0337113,40.0748212 27.6091415,26 C26.6127533,26 25.7385119,44.7478165 25.6273446,46.4945731 C25.174784,53.5889755 24.6463963,60.5254529 25.3216346,67.6261326 C26.485803,79.8749043 27.6993791,95.2339402 37.032627,104.58753 C45.4659003,113.039493 57.7103052,114.806417 68.2713185,120.141327 C69.631059,120.828202 71.4347824,121.676306 73.3798667,122.37111 C75.4289129,123.934171 79.4926946,125 84.1740722,125 C89.0846465,125 93.3155222,123.827456 95.2540874,122.137856 C96.9548781,121.49261 98.5180822,120.752874 99.7285704,120.141327 C110.288776,114.805245 122.533989,113.039493 130.967262,104.58753 C140.30051,95.2339402 141.514086,79.8749043 142.678597,67.6261326 C143.353493,60.5254529 142.825105,53.5889755 142.372887,46.4945731 C142.261377,44.7478165 141.387136,26 140.39109,26 Z"
                              id="react-path-45"
                            />
                          </defs>
                          <mask
                            fill="white"
                            id="react-mask-44"
                          >
                            <use
                              xlink:href="#react-path-45"
                            />
                          </mask>
                          <use
                            fill="#252E32"
                            fill-rule="evenodd"
                            id="Beardness"
                            xlink:href="#react-path-45"
                          />
                          <g
                            fill="#2C1B18"
                            id="Color/Hair/Brown"
                            mask="url(#react-mask-44)"
                          >
                            <g
                              id="Color"
                              transform="translate(-32.000000, 0.000000)"
                            >
                              <rect
                                height="244"
                                width="264"
                                x="0"
                                y="0"
                              />
                            </g>
                          </g>
                        </g>
                        <mask
                          fill="white"
                          id="react-mask-40"
                        >
                          <use
                            xlink:href="#react-path-42"
                          />
                        </mask>
                        <use
                          fill="#1F3140"
                          fill-rule="evenodd"
                          id="Short-Hair"
                          stroke="none"
                          xlink:href="#react-path-42"
                        />
                        <g
                          fill="#2C1B18"
                          id="Skin/👶🏽-03-Brown"
                          mask="url(#react-mask-40)"
                        >
                          <g
                            id="Color"
                            transform="translate(0.000000, 0.000000) "
                          >
                            <rect
                              height="280"
                              width="264"
                              x="0"
                              y="0"
                            />
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
    </figure>
    <div
      class="request__wrapper"
    >
      <div
        class="request__info-container"
      >
        <span
          class="request__participant-name"
        >
          user-name-1
        </span>
        <span
          class="request__info-text"
        >
          Is requesting to participate
        </span>
      </div>
      <div
        class="request__button-container"
      >
        <button
          class="request__button"
        >
          Reject
        </button>
        <button
          class="request__button"
        >
          Accept
        </button>
      </div>
    </div>
    <div
      class="request__icon-container"
    >
      <svg
        class="request-icon"
      >
        icon-hand.svg
      </svg>
    </div>
  </div>
  <div
    class="request__container"
  >
    <figure
      class="request__request-figure"
    >
      <div
        class="user-avatar"
      >
        <svg
          class="avatar accent-color__grooming-green"
          height="280px"
          version="1.1"
          viewBox="0 0 264 280"
          width="264px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <desc>
            Created with getavataaars.com
          </desc>
          <defs>
            <circle
              cx="120"
              cy="120"
              id="react-path-46"
              r="120"
            />
            <path
              d="M12,160 C12,226.27417 65.72583,280 132,280 C198.27417,280 252,226.27417 252,160 L264,160 L264,-1.42108547e-14 L-3.19744231e-14,-1.42108547e-14 L-3.19744231e-14,160 L12,160 Z"
              id="react-path-47"
            />
            <path
              d="M124,144.610951 L124,163 L128,163 L128,163 C167.764502,163 200,195.235498 200,235 L200,244 L0,244 L0,235 C-4.86974701e-15,195.235498 32.235498,163 72,163 L72,163 L76,163 L76,144.610951 C58.7626345,136.422372 46.3722246,119.687011 44.3051388,99.8812385 C38.4803105,99.0577866 34,94.0521096 34,88 L34,74 C34,68.0540074 38.3245733,63.1180731 44,62.1659169 L44,56 L44,56 C44,25.072054 69.072054,5.68137151e-15 100,0 L100,0 L100,0 C130.927946,-5.68137151e-15 156,25.072054 156,56 L156,62.1659169 C161.675427,63.1180731 166,68.0540074 166,74 L166,88 C166,94.0521096 161.51969,99.0577866 155.694861,99.8812385 C153.627775,119.687011 141.237365,136.422372 124,144.610951 Z"
              id="react-path-48"
            />
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
            id="Avataaar"
            stroke="none"
            stroke-width="1"
          >
            <g
              id="Avataaar/Circle"
              transform="translate(-825.000000, -1100.000000)"
            >
              <g
                transform="translate(825.000000, 1100.000000)"
              >
                <g
                  fill-rule="evenodd"
                  id="Circle"
                  stroke-width="1"
                  transform="translate(12.000000, 40.000000)"
                >
                  <mask
                    fill="white"
                    id="react-mask-49"
                  >
                    <use
                      xlink:href="#react-path-46"
                    />
                  </mask>
                  <use
                    fill="#E6E6E6"
                    id="Circle-Background"
                    xlink:href="#react-path-46"
                  />
                  <g
                    fill="#65C9FF"
                    id="Color/Palette/Blue-01"
                    mask="url(#react-mask-49)"
                  >
                    <rect
                      height="240"
                      id="🖍Color"
                      width="240"
                      x="0"
                      y="0"
                    />
                  </g>
                </g>
                <mask
                  fill="white"
                  id="react-mask-50"
                >
                  <use
                    xlink:href="#react-path-47"
                  />
                </mask>
                <g
                  id="Mask"
                />
                <g
                  fill-rule="evenodd"
                  id="Avataaar"
                  mask="url(#react-mask-50)"
                  stroke-width="1"
                >
                  <g
                    id="Body"
                    transform="translate(32.000000, 36.000000)"
                  >
                    <mask
                      fill="white"
                      id="react-mask-51"
                    >
                      <use
                        xlink:href="#react-path-48"
                      />
                    </mask>
                    <use
                      fill="#D0C6AC"
                      xlink:href="#react-path-48"
                    />
                    <g
                      fill="#D08B5B"
                      id="Skin/👶🏽-03-Brown"
                      mask="url(#react-mask-51)"
                    >
                      <g
                        id="Color"
                        transform="translate(0.000000, 0.000000)"
                      >
                        <rect
                          height="280"
                          width="264"
                          x="0"
                          y="0"
                        />
                      </g>
                    </g>
                    <path
                      d="M156,79 L156,102 C156,132.927946 130.927946,158 100,158 C69.072054,158 44,132.927946 44,102 L44,79 L44,94 C44,124.927946 69.072054,150 100,150 C130.927946,150 156,124.927946 156,94 L156,79 Z"
                      fill="#000000"
                      fill-opacity="0.100000001"
                      id="Neck-Shadow"
                      mask="url(#react-mask-51)"
                    />
                  </g>
                  <g
                    id="Clothing/Shirt-V-Neck"
                    transform="translate(0.000000, 170.000000)"
                  >
                    <defs>
                      <path
                        d="M171.319631,29.9364358 C205.706337,35.3665707 232,65.13854 232,101.051724 L232,110 L32,110 L32,101.051724 C32,65.1380521 58.2943778,35.3657617 92.6817711,29.9362145 C93.5835973,35.0053598 96.116393,39.8238432 100.236125,43.5389794 L100.236125,43.5389794 L129.321203,69.7676333 C130.843316,71.1402598 133.156684,71.1402598 134.678797,69.7676333 L134.678797,69.7676333 L163.763875,43.5389794 C164.189462,43.1551884 164.601167,42.7562772 164.998197,42.3430127 C168.414164,38.7873666 170.517305,34.4520434 171.319628,29.9364354 Z"
                        id="react-path-52"
                      />
                    </defs>
                    <mask
                      fill="white"
                      id="react-mask-53"
                    >
                      <use
                        xlink:href="#react-path-52"
                      />
                    </mask>
                    <use
                      fill="#E6E6E6"
                      fill-rule="evenodd"
                      id="Clothes"
                      xlink:href="#react-path-52"
                    />
                    <g
                      fill="#929598"
                      fill-rule="evenodd"
                      id="Color/Palette/Gray-01"
                      mask="url(#react-mask-53)"
                    >
                      <rect
                        height="110"
                        id="🖍Color"
                        width="264"
                        x="0"
                        y="0"
                      />
                    </g>
                  </g>
                  <g
                    fill="#000000"
                    id="Face"
                    transform="translate(76.000000, 82.000000)"
                  >
                    <g
                      fill="#000000"
                      fill-opacity="0.699999988"
                      id="Mouth/Disbelief"
                      transform="translate(2.000000, 52.000000)"
                    >
                      <path
                        d="M40,15 C40,22.7319865 46.2680135,29 54,29 L54,29 C61.7319865,29 68,22.7319865 68,15"
                        id="Mouth"
                        transform="translate(54.000000, 22.000000) scale(1, -1) translate(-54.000000, -22.000000) "
                      />
                    </g>
                    <g
                      fill-opacity="0.16"
                      id="Nose/Default"
                      transform="translate(28.000000, 40.000000)"
                    >
                      <path
                        d="M16,8 C16,12.418278 21.372583,16 28,16 L28,16 C34.627417,16 40,12.418278 40,8"
                        id="Nose"
                      />
                    </g>
                    <g
                      fill-opacity="0.599999964"
                      id="Eyes/Default-😀"
                      transform="translate(0.000000, 8.000000)"
                    >
                      <circle
                        cx="30"
                        cy="22"
                        id="Eye"
                        r="6"
                      />
                      <circle
                        cx="82"
                        cy="22"
                        id="Eye"
                        r="6"
                      />
                    </g>
                    <g
                      fill-opacity="0.599999964"
                      id="Eyebrow/Natural/Raised-Excited-Natural"
                    >
                      <path
                        d="M22.7663531,1.57844898 L23.6772984,1.17582144 C28.9190996,-0.905265751 36.8645466,-0.0328729562 41.7227321,2.29911638 C42.2897848,2.57148957 41.9021563,3.4519421 41.3211012,3.40711006 C26.4021788,2.25602197 16.3582869,11.5525942 12.9460869,17.8470939 C12.8449215,18.0337142 12.5391523,18.05489 12.4635344,17.8808353 C10.156283,12.5620676 16.9134476,3.89614725 22.7663531,1.57844898 Z"
                        id="Eye-Browse-Reddit"
                      />
                      <path
                        d="M80.7663531,1.57844898 L81.6772984,1.17582144 C86.9190996,-0.905265751 94.8645466,-0.0328729562 99.7227321,2.29911638 C100.289785,2.57148957 99.9021563,3.4519421 99.3211012,3.40711006 C84.4021788,2.25602197 74.3582869,11.5525942 70.9460869,17.8470939 C70.8449215,18.0337142 70.5391523,18.05489 70.4635344,17.8808353 C68.156283,12.5620676 74.9134476,3.89614725 80.7663531,1.57844898 Z"
                        id="Eye-Browse-Reddit"
                        transform="translate(85.000000, 9.000000) scale(-1, 1) translate(-85.000000, -9.000000) "
                      />
                    </g>
                  </g>
                  <g
                    fill-rule="evenodd"
                    id="Top"
                    stroke-width="1"
                  >
                    <defs>
                      <rect
                        height="280"
                        id="react-path-58"
                        width="264"
                        x="0"
                        y="0"
                      />
                      <path
                        d="M167.308863,35.006118 C147.121091,23.3065109 127.128954,25.2219854 112.036894,29.0299707 C96.9448338,32.8379559 88.0168242,43.6513048 80.3566792,59.6480618 C76.5956048,67.5028569 74.3660182,76.7914798 74.0230569,85.4813651 C73.8884429,88.8932666 74.3484305,92.415154 75.267729,95.7003546 C75.6049405,96.9061873 77.4232441,101.086987 77.9224658,97.70885 C78.0885348,96.584253 77.4804043,95.0327505 77.4215529,93.8376154 C77.3444374,92.2693977 77.4273028,90.6807875 77.5341822,89.1149098 C77.7340739,86.1874141 78.2559568,83.3154127 79.1847257,80.524647 C80.5119249,76.5367405 82.2013644,72.212859 84.7874413,68.8480942 C91.1883705,60.5205939 102.268658,60.045883 111.066257,55.4635848 C110.302881,56.8686624 107.359637,59.1432635 108.379389,60.7268592 C109.083576,61.8207003 111.749474,61.4890712 113.022219,61.4539693 C116.370996,61.3623702 119.734993,60.7796791 123.042844,60.306974 C128.255923,59.5618115 133.140585,58.0517626 138.046555,56.2181078 C142.06299,54.7164165 146.650012,53.3257139 149.66868,50.1404701 C154.539813,55.1881187 160.809849,59.9345599 167.070414,63.1428706 C172.68835,66.0222267 181.748751,67.461069 185.182761,73.3006826 C189.2479,80.2147477 187.37751,88.7073939 188.619138,96.2008069 C189.091302,99.05041 190.164155,98.986558 190.751315,96.4378281 C191.748406,92.1082634 192.219217,87.6102098 191.901961,83.1592929 C191.183568,73.1114668 187.496636,46.7057251 167.308863,35.006118 Z"
                        id="react-path-57"
                      />
                      <filter
                        filterUnits="objectBoundingBox"
                        height="108.0%"
                        id="react-filter-54"
                        width="101.5%"
                        x="-0.8%"
                        y="-2.0%"
                      >
                        <feoffset
                          dx="0"
                          dy="2"
                          in="SourceAlpha"
                          result="shadowOffsetOuter1"
                        />
                        <fecolormatrix
                          in="shadowOffsetOuter1"
                          result="shadowMatrixOuter1"
                          type="matrix"
                          values="0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.16 0"
                        />
                        <femerge>
                          <femergenode
                            in="shadowMatrixOuter1"
                          />
                          <femergenode
                            in="SourceGraphic"
                          />
                        </femerge>
                      </filter>
                    </defs>
                    <mask
                      fill="white"
                      id="react-mask-56"
                    >
                      <use
                        xlink:href="#react-path-58"
                      />
                    </mask>
                    <g
                      id="Mask"
                    />
                    <g
                      id="Top/Short-Hair/Short-Round"
                      mask="url(#react-mask-56)"
                    >
                      <g
                        transform="translate(-1.000000, 0.000000)"
                      >
                        <g
                          id="Facial-Hair/Beard-Light"
                          transform="translate(49.000000, 72.000000)"
                        >
                          <defs>
                            <path
                              d="M101.428403,98.1685688 C98.9148372,100.462621 96.23722,101.494309 92.8529444,100.772863 C92.2705777,100.648833 89.8963391,96.2345713 83.9998344,96.2345713 C78.1033297,96.2345713 75.7294253,100.648833 75.1467245,100.772863 C71.7624488,101.494309 69.0848316,100.462621 66.5712661,98.1685688 C61.8461772,93.855604 57.9166219,87.9081858 60.2778299,81.4191814 C61.5083844,78.0369425 63.5097479,74.3237342 67.1506257,73.2459109 C71.0384163,72.0955419 76.4968931,73.2439051 80.4147542,72.4582708 C81.6840664,72.2035248 83.0706538,71.7508657 83.9998344,71 C84.929015,71.7508657 86.3159365,72.2035248 87.5845805,72.4582708 C91.5027758,73.2439051 96.9612525,72.0955419 100.849043,73.2459109 C104.489921,74.3237342 106.491284,78.0369425 107.722173,81.4191814 C110.083381,87.9081858 106.153826,93.855604 101.428403,98.1685688 M140.081033,26 C136.670693,34.4002532 137.987774,44.8580348 137.356666,53.6758724 C136.844038,60.8431942 135.33712,71.5857526 128.972858,76.214531 C125.718361,78.5816138 119.79436,82.5598986 115.54187,81.4501943 C112.614539,80.6863848 112.302182,72.290096 108.455284,69.1469801 C104.09172,65.5823153 98.6429854,64.0160432 93.1491481,64.2578722 C90.7785381,64.3622683 85.9841367,64.3374908 83.9999331,66.1604584 C82.0157295,64.3374908 77.2216647,64.3622683 74.8510547,64.2578722 C69.3568808,64.0160432 63.9081467,65.5823153 59.5445817,69.1469801 C55.6976839,72.290096 55.3856641,80.6863848 52.4583326,81.4501943 C48.2058427,82.5598986 42.2818421,78.5816138 39.0270077,76.214531 C32.6624096,71.5857526 31.1561652,60.8431942 30.642864,53.6758724 C30.0120926,44.8580348 31.3291729,34.4002532 27.9188335,26 C26.2597768,26 27.3540339,42.1288693 27.3540339,42.1288693 L27.3540339,62.4851205 C27.3856735,77.7732046 36.935095,100.655445 58.1080116,109.393004 C63.2861266,111.52982 75.0153111,115 83.9999331,115 C92.9845551,115 104.71374,111.860188 109.891855,109.723371 C131.064771,100.985813 140.614193,77.7732046 140.646169,62.4851205 L140.646169,42.1288693 C140.646169,42.1288693 141.740089,26 140.081033,26"
                              id="react-path-60"
                            />
                          </defs>
                          <mask
                            fill="white"
                            id="react-mask-59"
                          >
                            <use
                              xlink:href="#react-path-60"
                            />
                          </mask>
                          <use
                            fill="#331B0C"
                            fill-rule="evenodd"
                            id="Lite-Beard"
                            xlink:href="#react-path-60"
                          />
                          <g
                            fill="#B58143"
                            id="Color/Hair/Brown"
                            mask="url(#react-mask-59)"
                          >
                            <g
                              id="Color"
                              transform="translate(-32.000000, 0.000000)"
                            >
                              <rect
                                height="244"
                                width="264"
                                x="0"
                                y="0"
                              />
                            </g>
                          </g>
                        </g>
                        <mask
                          fill="white"
                          id="react-mask-55"
                        >
                          <use
                            xlink:href="#react-path-57"
                          />
                        </mask>
                        <use
                          fill="#28354B"
                          fill-rule="evenodd"
                          id="Short-Hair"
                          stroke="none"
                          xlink:href="#react-path-57"
                        />
                        <g
                          fill="#B58143"
                          id="Skin/👶🏽-03-Brown"
                          mask="url(#react-mask-55)"
                        >
                          <g
                            id="Color"
                            transform="translate(0.000000, 0.000000) "
                          >
                            <rect
                              height="280"
                              width="264"
                              x="0"
                              y="0"
                            />
                          </g>
                        </g>
                        <g
                          fill="none"
                          id="Top/_Resources/Round"
                          transform="translate(62.000000, 85.000000)"
                        >
                          <defs>
                            <path
                              d="M80.4646192,16.3941179 C84.3801509,8.45869677 92.552602,3 102,3 C110.919691,3 118.702887,7.86591082 122.839921,15.0880638 C123.050197,15.0306504 123.271519,15 123.5,15 L131.5,15 C132.880712,15 134,16.1192881 134,17.5 C134,18.8807119 132.880712,20 131.5,20 L124.963126,20 C125.637355,22.2145921 126,24.5649459 126,27 C126,40.254834 115.254834,51 102,51 C88.745166,51 78,40.254834 78,27 C78,25.5781066 78.1236513,24.1850936 78.3607874,22.8311273 C78.2762458,18.4553035 74.9135957,15 70.8624171,15 C67.1256697,15 63.9747186,17.9397535 63.4417635,21.8300629 C63.8073299,23.4951922 64,25.2250958 64,27 C64,40.254834 53.254834,51 40,51 C26.745166,51 16,40.254834 16,27 C16,24.5649459 16.3626451,22.2145921 17.0368738,20 L10.5,20 C9.11928813,20 8,18.8807119 8,17.5 C8,16.1192881 9.11928813,15 10.5,15 L10.5,15 L18.5,15 C18.728481,15 18.9498033,15.0306504 19.1600793,15.0880638 C23.2971127,7.86591082 31.0803092,3 40,3 C49.3521568,3 57.4549431,8.34919095 61.415666,16.15488 C63.4929212,13.0392725 66.9494432,11 70.8624171,11 C74.8746823,11 78.4070368,13.1440781 80.4646192,16.3941179 Z M40,47 C51.045695,47 60,38.045695 60,27 C60,15.954305 51.045695,7 40,7 C28.954305,7 20,15.954305 20,27 C20,38.045695 28.954305,47 40,47 Z M102,47 C113.045695,47 122,38.045695 122,27 C122,15.954305 113.045695,7 102,7 C90.954305,7 82,15.954305 82,27 C82,38.045695 90.954305,47 102,47 Z"
                              id="react-path-61"
                            />
                            <filter
                              filterUnits="objectBoundingBox"
                              height="108.3%"
                              id="react-filter-62"
                              width="101.6%"
                              x="-0.8%"
                              y="-2.1%"
                            >
                              <feoffset
                                dx="0"
                                dy="2"
                                in="SourceAlpha"
                                result="shadowOffsetOuter1"
                              />
                              <fecolormatrix
                                in="shadowOffsetOuter1"
                                type="matrix"
                                values="0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.1 0"
                              />
                            </filter>
                          </defs>
                          <g
                            id="Lennon-Glasses"
                          >
                            <use
                              fill="black"
                              fill-opacity="1"
                              filter="url(#react-filter-62)"
                              xlink:href="#react-path-61"
                            />
                            <use
                              fill="#252C2F"
                              fill-rule="evenodd"
                              xlink:href="#react-path-61"
                            />
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
    </figure>
    <div
      class="request__wrapper"
    >
      <div
        class="request__info-container"
      >
        <span
          class="request__participant-name"
        >
          user-name-2
        </span>
        <span
          class="request__info-text"
        >
          Is requesting to participate
        </span>
      </div>
      <div
        class="request__button-container"
      >
        <button
          class="request__button"
        >
          Reject
        </button>
        <button
          class="request__button"
        >
          Accept
        </button>
      </div>
    </div>
    <div
      class="request__icon-container"
    >
      <svg
        class="request-icon"
      >
        icon-hand.svg
      </svg>
    </div>
  </div>
</div>
`;

exports[`JoinRequest should render correctly on single join request 1`] = `
<div
  class="requests__wrapper"
>
  <div
    class="request__container"
  >
    <figure
      class="request__request-figure"
    >
      <div
        class="user-avatar"
      >
        <svg
          class="avatar accent-color__planning-pink"
          height="280px"
          version="1.1"
          viewBox="0 0 264 280"
          width="264px"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <desc>
            Created with getavataaars.com
          </desc>
          <defs>
            <circle
              cx="120"
              cy="120"
              id="react-path-1"
              r="120"
            />
            <path
              d="M12,160 C12,226.27417 65.72583,280 132,280 C198.27417,280 252,226.27417 252,160 L264,160 L264,-1.42108547e-14 L-3.19744231e-14,-1.42108547e-14 L-3.19744231e-14,160 L12,160 Z"
              id="react-path-2"
            />
            <path
              d="M124,144.610951 L124,163 L128,163 L128,163 C167.764502,163 200,195.235498 200,235 L200,244 L0,244 L0,235 C-4.86974701e-15,195.235498 32.235498,163 72,163 L72,163 L76,163 L76,144.610951 C58.7626345,136.422372 46.3722246,119.687011 44.3051388,99.8812385 C38.4803105,99.0577866 34,94.0521096 34,88 L34,74 C34,68.0540074 38.3245733,63.1180731 44,62.1659169 L44,56 L44,56 C44,25.072054 69.072054,5.68137151e-15 100,0 L100,0 L100,0 C130.927946,-5.68137151e-15 156,25.072054 156,56 L156,62.1659169 C161.675427,63.1180731 166,68.0540074 166,74 L166,88 C166,94.0521096 161.51969,99.0577866 155.694861,99.8812385 C153.627775,119.687011 141.237365,136.422372 124,144.610951 Z"
              id="react-path-3"
            />
          </defs>
          <g
            fill="none"
            fill-rule="evenodd"
            id="Avataaar"
            stroke="none"
            stroke-width="1"
          >
            <g
              id="Avataaar/Circle"
              transform="translate(-825.000000, -1100.000000)"
            >
              <g
                transform="translate(825.000000, 1100.000000)"
              >
                <g
                  fill-rule="evenodd"
                  id="Circle"
                  stroke-width="1"
                  transform="translate(12.000000, 40.000000)"
                >
                  <mask
                    fill="white"
                    id="react-mask-4"
                  >
                    <use
                      xlink:href="#react-path-1"
                    />
                  </mask>
                  <use
                    fill="#E6E6E6"
                    id="Circle-Background"
                    xlink:href="#react-path-1"
                  />
                  <g
                    fill="#65C9FF"
                    id="Color/Palette/Blue-01"
                    mask="url(#react-mask-4)"
                  >
                    <rect
                      height="240"
                      id="🖍Color"
                      width="240"
                      x="0"
                      y="0"
                    />
                  </g>
                </g>
                <mask
                  fill="white"
                  id="react-mask-5"
                >
                  <use
                    xlink:href="#react-path-2"
                  />
                </mask>
                <g
                  id="Mask"
                />
                <g
                  fill-rule="evenodd"
                  id="Avataaar"
                  mask="url(#react-mask-5)"
                  stroke-width="1"
                >
                  <g
                    id="Body"
                    transform="translate(32.000000, 36.000000)"
                  >
                    <mask
                      fill="white"
                      id="react-mask-6"
                    >
                      <use
                        xlink:href="#react-path-3"
                      />
                    </mask>
                    <use
                      fill="#D0C6AC"
                      xlink:href="#react-path-3"
                    />
                    <g
                      fill="#FFDBB4"
                      id="Skin/👶🏽-03-Brown"
                      mask="url(#react-mask-6)"
                    >
                      <g
                        id="Color"
                        transform="translate(0.000000, 0.000000)"
                      >
                        <rect
                          height="280"
                          width="264"
                          x="0"
                          y="0"
                        />
                      </g>
                    </g>
                    <path
                      d="M156,79 L156,102 C156,132.927946 130.927946,158 100,158 C69.072054,158 44,132.927946 44,102 L44,79 L44,94 C44,124.927946 69.072054,150 100,150 C130.927946,150 156,124.927946 156,94 L156,79 Z"
                      fill="#000000"
                      fill-opacity="0.100000001"
                      id="Neck-Shadow"
                      mask="url(#react-mask-6)"
                    />
                  </g>
                  <g
                    id="Clothing/Shirt-Crew-Neck"
                    transform="translate(0.000000, 170.000000)"
                  >
                    <defs>
                      <path
                        d="M165.960472,29.2949161 C202.936473,32.3249982 232,63.2942856 232,101.051724 L232,110 L32,110 L32,101.051724 C32,62.9525631 61.591985,31.7649812 99.0454063,29.2195264 C99.0152598,29.5931145 99,29.9692272 99,30.3476251 C99,42.2107177 113.998461,51.8276544 132.5,51.8276544 C151.001539,51.8276544 166,42.2107177 166,30.3476251 C166,29.9946691 165.986723,29.6437014 165.960472,29.2949161 Z"
                        id="react-path-7"
                      />
                    </defs>
                    <mask
                      fill="white"
                      id="react-mask-8"
                    >
                      <use
                        xlink:href="#react-path-7"
                      />
                    </mask>
                    <use
                      fill="#E6E6E6"
                      fill-rule="evenodd"
                      id="Clothes"
                      xlink:href="#react-path-7"
                    />
                    <g
                      fill="#25557C"
                      fill-rule="evenodd"
                      id="Color/Palette/Gray-01"
                      mask="url(#react-mask-8)"
                    >
                      <rect
                        height="110"
                        id="🖍Color"
                        width="264"
                        x="0"
                        y="0"
                      />
                    </g>
                    <g
                      fill="#000000"
                      fill-opacity="0.16"
                      fill-rule="evenodd"
                      id="Shadowy"
                      mask="url(#react-mask-8)"
                      opacity="0.599999964"
                      stroke-width="1"
                    >
                      <g
                        id="Hola-👋🏼"
                        transform="translate(92.000000, 4.000000)"
                      >
                        <ellipse
                          cx="40.5"
                          cy="27.8476251"
                          rx="39.6351047"
                          ry="26.9138272"
                        />
                      </g>
                    </g>
                  </g>
                  <g
                    fill="#000000"
                    id="Face"
                    transform="translate(76.000000, 82.000000)"
                  >
                    <g
                      id="Mouth/Concerned"
                      transform="translate(2.000000, 52.000000)"
                    >
                      <defs>
                        <path
                          d="M35.117844,15.1280772 C36.1757121,24.6198025 44.2259873,32 54,32 C63.8042055,32 71.8740075,24.574136 72.8917593,15.0400546 C72.9736685,14.272746 72.1167429,13 71.042767,13 C56.1487536,13 44.7379213,13 37.0868244,13 C36.0066168,13 35.0120058,14.1784435 35.117844,15.1280772 Z"
                          id="react-path-9"
                        />
                      </defs>
                      <mask
                        fill="white"
                        id="react-mask-10"
                      >
                        <use
                          transform="translate(54.003637, 22.500000) scale(1, -1) translate(-54.003637, -22.500000) "
                          xlink:href="#react-path-9"
                        />
                      </mask>
                      <use
                        fill="#000000"
                        fill-opacity="0.699999988"
                        fill-rule="evenodd"
                        id="Mouth"
                        transform="translate(54.003637, 22.500000) scale(1, -1) translate(-54.003637, -22.500000) "
                        xlink:href="#react-path-9"
                      />
                      <rect
                        fill="#FFFFFF"
                        fill-rule="evenodd"
                        height="16"
                        id="Teeth"
                        mask="url(#react-mask-10)"
                        rx="5"
                        width="31"
                        x="39"
                        y="2"
                      />
                      <g
                        fill="#FF4F6D"
                        fill-rule="evenodd"
                        id="Tongue"
                        mask="url(#react-mask-10)"
                        stroke-width="1"
                      >
                        <g
                          transform="translate(38.000000, 24.000000)"
                        >
                          <circle
                            cx="11"
                            cy="11"
                            id="friend?"
                            r="11"
                          />
                          <circle
                            cx="21"
                            cy="11"
                            id="How-you-doing"
                            r="11"
                          />
                        </g>
                      </g>
                    </g>
                    <g
                      fill-opacity="0.16"
                      id="Nose/Default"
                      transform="translate(28.000000, 40.000000)"
                    >
                      <path
                        d="M16,8 C16,12.418278 21.372583,16 28,16 L28,16 C34.627417,16 40,12.418278 40,8"
                        id="Nose"
                      />
                    </g>
                    <g
                      fill-opacity="0.599999964"
                      id="Eyes/Closed-😌"
                      transform="translate(0.000000, 8.000000)"
                    >
                      <path
                        d="M16.1601674,32.4473116 C18.006676,28.648508 22.1644225,26 26.9975803,26 C31.8136766,26 35.9591217,28.629842 37.8153518,32.4071242 C38.3667605,33.5291977 37.5821037,34.4474817 36.790607,33.7670228 C34.3395063,31.6597833 30.8587163,30.3437884 26.9975803,30.3437884 C23.2572061,30.3437884 19.8737584,31.5787519 17.4375392,33.5716412 C16.5467928,34.3002944 15.6201012,33.5583844 16.1601674,32.4473116 Z"
                        id="Closed-Eye"
                        transform="translate(27.000000, 30.000000) scale(1, -1) translate(-27.000000, -30.000000) "
                      />
                      <path
                        d="M74.1601674,32.4473116 C76.006676,28.648508 80.1644225,26 84.9975803,26 C89.8136766,26 93.9591217,28.629842 95.8153518,32.4071242 C96.3667605,33.5291977 95.5821037,34.4474817 94.790607,33.7670228 C92.3395063,31.6597833 88.8587163,30.3437884 84.9975803,30.3437884 C81.2572061,30.3437884 77.8737584,31.5787519 75.4375392,33.5716412 C74.5467928,34.3002944 73.6201012,33.5583844 74.1601674,32.4473116 Z"
                        id="Closed-Eye"
                        transform="translate(85.000000, 30.000000) scale(1, -1) translate(-85.000000, -30.000000) "
                      />
                    </g>
                  </g>
                  <g
                    fill-rule="evenodd"
                    id="Top"
                    stroke-width="1"
                  >
                    <defs>
                      <rect
                        height="280"
                        id="react-path-15"
                        width="264"
                        x="0"
                        y="0"
                      />
                      <path
                        d="M94.2519269,52.0221149 C94.3749353,51.9677149 94.0696712,51.9468149 93.3361345,51.9595149 C94.2276637,51.9577149 94.5329279,51.9785149 94.2519269,52.0221149 M86.1169775,36.3015924 C86.1148422,36.2819924 86.1337548,36.4526924 86.1169775,36.3015924 M193.765056,70.7656665 C193.500946,67.448734 193.03295,64.1518864 192.246676,60.9110823 C191.622233,58.3353492 190.769007,55.8775343 189.760006,53.4200433 C189.150703,51.9353766 187.727538,49.8961062 187.560324,48.2944933 C187.395466,46.7168527 188.626521,44.969138 188.889285,43.1323368 C189.144311,41.3447761 189.100909,39.4652134 188.734183,37.6938503 C187.901144,33.6710288 185.140271,29.9300447 180.877167,28.8814158 C179.925362,28.6471994 177.913417,28.9358396 177.240862,28.3815597 C176.469729,27.7459682 175.932761,25.5806808 175.234637,24.7121687 C173.244224,22.2362125 170.13984,20.6417265 166.865887,21.1976261 C164.454917,21.606776 165.839391,22.1053363 164.032005,20.6864317 C163.027041,19.8976114 162.276095,18.6931622 161.300066,17.8392279 C159.832826,16.5563826 158.149588,15.4581893 156.408146,14.556958 C151.851325,12.19892 146.654249,10.4848961 141.564162,9.64942693 C132.278934,8.12523827 122.368926,9.45408458 113.368668,11.8688141 C108.890239,13.0703477 104.381531,14.5951842 100.222053,16.6117782 C98.4385542,17.4764029 97.4090304,18.1936301 95.5494951,18.4200717 C92.6207355,18.7767416 90.1404579,18.7589243 87.3661268,20.0009517 C78.8298269,23.8229236 74.9849256,32.6897818 78.3066539,41.1750259 C78.974835,42.8815988 79.8795374,44.3801954 81.1267416,45.7586062 C82.6474761,47.4392631 83.1975648,47.1085093 81.8877817,49.0411999 C79.9289949,51.9311653 78.2777195,55.0129095 76.9332826,58.2128958 C73.4043038,66.6145606 72.8138416,76.0771643 73.043634,85.0373203 C73.1240445,88.1741362 73.2586228,91.3495022 73.753198,94.4561907 C73.966841,95.8009106 74.0267283,98.3293468 75.0353925,99.3271154 C75.5471264,99.8331265 76.2762042,100.115288 77.0035997,99.9137903 C78.7130802,99.4401742 78.1253096,98.1787097 78.1650102,97.0076274 C78.364859,91.1240324 78.0950295,85.9191145 79.4943071,80.1064647 C80.5278683,75.8118486 82.2504702,71.9114806 84.4827873,68.0713675 C87.3213795,63.1871608 90.3857268,58.8977279 94.2895061,54.7155226 C95.2073299,53.7320079 95.4078515,53.3150832 96.6385698,53.243814 C97.5705244,53.1900382 98.9338023,53.8282213 99.8398505,54.0491558 C101.837665,54.5360539 103.83918,55.0174448 105.873331,55.3452831 C109.613261,55.9481556 113.316519,55.9886494 117.090094,55.8704074 C124.516459,55.6381346 131.974787,55.1172217 139.175061,53.2470535 C143.956964,52.00535 148.196516,49.7762443 152.776887,48.1422364 C152.858644,48.1130808 154.006596,47.2951049 154.207791,47.3284719 C154.488723,47.3747968 156.184746,49.1542588 156.471061,49.3784327 C158.696649,51.1238798 161.137899,51.8566566 163.541467,53.2081794 C166.504881,54.8745825 163.634999,52.4899804 165.269452,54.5668292 C165.745859,55.1716454 165.989782,56.2931632 166.371984,56.9783192 C167.587899,59.1610999 169.279548,61.0795367 171.302932,62.6017816 C173.258018,64.0725184 176.196198,64.7829426 177.193087,66.697168 C177.961865,68.1740599 178.220929,70.1812592 178.841334,71.7579279 C180.468722,75.8931602 182.617937,79.7494709 184.767152,83.6443317 C186.498502,86.7830913 188.392354,89.5250111 188.584801,93.1117947 C188.651754,94.3603012 187.463764,101.849397 190.357534,99.5716982 C190.786502,99.2341415 191.711391,95.415733 191.901483,94.7678314 C192.672616,92.135083 192.94682,89.3866841 193.29605,86.6816947 C193.990474,81.3021672 194.218584,76.1837441 193.765056,70.7656665"
                        id="react-path-14"
                      />
                      <filter
                        filterUnits="objectBoundingBox"
                        height="108.0%"
                        id="react-filter-11"
                        width="101.5%"
                        x="-0.8%"
                        y="-2.0%"
                      >
                        <feoffset
                          dx="0"
                          dy="2"
                          in="SourceAlpha"
                          result="shadowOffsetOuter1"
                        />
                        <fecolormatrix
                          in="shadowOffsetOuter1"
                          result="shadowMatrixOuter1"
                          type="matrix"
                          values="0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.16 0"
                        />
                        <femerge>
                          <femergenode
                            in="shadowMatrixOuter1"
                          />
                          <femergenode
                            in="SourceGraphic"
                          />
                        </femerge>
                      </filter>
                    </defs>
                    <mask
                      fill="white"
                      id="react-mask-13"
                    >
                      <use
                        xlink:href="#react-path-15"
                      />
                    </mask>
                    <g
                      id="Mask"
                    />
                    <g
                      id="Top/Short-Hair/Short-Curly"
                      mask="url(#react-mask-13)"
                    >
                      <g
                        transform="translate(-1.000000, 0.000000)"
                      >
                        <mask
                          fill="white"
                          id="react-mask-12"
                        >
                          <use
                            xlink:href="#react-path-14"
                          />
                        </mask>
                        <use
                          fill="#28354B"
                          fill-rule="evenodd"
                          id="Short-Hair"
                          stroke="none"
                          xlink:href="#react-path-14"
                        />
                        <g
                          fill="#A55728"
                          id="Skin/👶🏽-03-Brown"
                          mask="url(#react-mask-12)"
                        >
                          <g
                            id="Color"
                            transform="translate(0.000000, 0.000000) "
                          >
                            <rect
                              height="280"
                              width="264"
                              x="0"
                              y="0"
                            />
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </g>
          </g>
        </svg>
      </div>
    </figure>
    <div
      class="request__wrapper"
    >
      <div
        class="request__info-container"
      >
        <span
          class="request__participant-name"
        >
          user-name-0
        </span>
        <span
          class="request__info-text"
        >
          Is requesting to participate
        </span>
      </div>
      <div
        class="request__button-container"
      >
        <button
          class="request__button"
        >
          Reject
        </button>
        <button
          class="request__button"
        >
          Accept
        </button>
      </div>
    </div>
    <div
      class="request__icon-container"
    >
      <svg
        class="request-icon"
      >
        icon-hand.svg
      </svg>
    </div>
  </div>
</div>
`;
